fixing z-index of speaker coursel indicator

--- a/html/assets/sass/style.scss
+++ b/html/assets/sass/style.scss
@@ -1172,6 +1172,7 @@ footer{
   }
   background: #fff1ce;
   .carousel-indicators {
+    z-index: 1;
     bottom: -35px;
   }
 
